<resources>
    <string name="app_name">Gp3Assignment2</string>
    <string name="add_task">Add Task</string>
    <string name="task_name">Task Name</string>
    <string name="enter_task_name">Enter task name</string>
    <string name="due_date">Due Date</string>
    <string name="time">Time</string>
    <string name="enter_due_date">Enter due date </string>
    <string name="enter_time">Enter Time </string>
    <string name="save">Save</string>
    <string name="task_id">Task ID: 00</string>
    <string name="list_task">List Tasks</string>
    <string name="due_date_and_time">due date and time</string>
    <string name="Task_Details">Task Details</string>
</resources>